--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <script src="condition.js" defer></script>
+    <script src="endCard.js" defer></script>
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -20,49 +22,50 @@
     <div id="winnerCard" class="winnerCard d-none">
         <h3 id="winnerHeadline"></h3>
         <img src="./img/game-over.png" alt="">
+        <button type="button" class="btn btn-primary" onclick="deleteWinnerCard()">Nochmal spielen</button>
     </div>
 
     <table>
         <tr>
-            <td onclick="chooseField(0)">
+            <td id="singleField0" onclick="chooseField(0)">
                 <div id="circleContainer0" class="circleContainer d-none"><img id="circleImg"  src="./img/circle.png" alt=""></div>
                 <div id="crossContainer0" class="crossContainer d-none"><img id="crossImg" src="./img/cross.png" alt=""></div>
             </td>
-            <td onclick="chooseField(1)">
+            <td id="singleField1" onclick="chooseField(1)">
                 <div id="circleContainer1" class="circleContainer d-none"><img id="circleImg"  src="./img/circle.png" alt=""></div>
                 <div id="crossContainer1" class="crossContainer d-none"><img id="crossImg" src="./img/cross.png" alt=""></div>
             </td>
-            <td onclick="chooseField(2)">
+            <td id="singleField2" onclick="chooseField(2)">
                 <div id="circleContainer2" class="circleContainer d-none"><img id="circleImg"  src="./img/circle.png" alt=""></div>
                 <div id="crossContainer2" class="crossContainer d-none"><img id="crossImg" src="./img/cross.png" alt=""></div>
             </td>
         </tr>
 
         <tr>
-            <td onclick="chooseField(3)">
+            <td id="singleField3" onclick="chooseField(3)">
                 <div id="circleContainer3" class="circleContainer d-none"><img id="circleImg"  src="./img/circle.png" alt=""></div>
                 <div id="crossContainer3" class="crossContainer d-none"><img id="crossImg" src="./img/cross.png" alt=""></div>
             </td>
-            <td onclick="chooseField(4)">
+            <td id="singleField4" onclick="chooseField(4)">
                 <div id="circleContainer4" class="circleContainer d-none"><img id="circleImg"  src="./img/circle.png" alt=""></div>
                 <div id="crossContainer4" class="crossContainer d-none"><img id="crossImg" src="./img/cross.png" alt=""></div>
             </td>
-            <td onclick="chooseField(5)">
+            <td id="singleField5" onclick="chooseField(5)">
                 <div id="circleContainer5" class="circleContainer d-none"><img id="circleImg"  src="./img/circle.png" alt=""></div>
                 <div id="crossContainer5" class="crossContainer d-none"><img id="crossImg" src="./img/cross.png" alt=""></div>
             </td>
         </tr>
 
         <tr>
-            <td onclick="chooseField(6)">
+            <td id="singleField6" onclick="chooseField(6)">
                 <div id="circleContainer6" class="circleContainer d-none"><img id="circleImg"  src="./img/circle.png" alt=""></div>
                 <div id="crossContainer6" class="crossContainer d-none"><img id="crossImg" src="./img/cross.png" alt=""></div>
             </td>
-            <td onclick="chooseField(7)">
+            <td id="singleField7" onclick="chooseField(7)">
                 <div id="circleContainer7" class="circleContainer d-none"><img id="circleImg"  src="./img/circle.png" alt=""></div>
                 <div id="crossContainer7" class="crossContainer d-none"><img id="crossImg" src="./img/cross.png" alt=""></div>
             </td>
-            <td onclick="chooseField(8)">
+            <td id="singleField8" onclick="chooseField(8)">
                 <div id="circleContainer8" class="circleContainer d-none"><img id="circleImg"  src="./img/circle.png" alt=""></div>
                 <div id="crossContainer8" class="crossContainer d-none"><img id="crossImg" src="./img/cross.png" alt=""></div>
             </td>
